# snowflake-mlops

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-prod.yml  deploy-stage.yml  deploy.yml  pr-checks.yml
deploy/: promote.py
deploy/strategies/: cross_region.py  multi_account.py  single_account.py
docs/: mlops-architecture.html  mlops-architecture.md
notebooks/: 01_setup_and_data.ipynb  02_feature_store.ipynb  03_model_training.ipynb  04_registry_and_deploy.ipynb  05_pipeline_orchestration.ipynb
scripts/: deploy_prod_service.py  generate_dataset.py  run_batch_inference.py  run_stage_pipeline.py  run_training_job.py  setup.sh  setup_cicd.sh  setup_stage_features.py
source/: __init__.py  config.py  snowpark_session.py
source/features/: entities.py  feature_views.py  training_data.py
source/pipeline/: ml_pipeline_dag.py
source/registry/: register_model.py
source/serving/: batch_inference.py  deploy_service.py
source/training/: evaluate_model.py  train_model.py
tests/: test_config.py  test_endpoint.py
